feat: proof of concept

--- a/src/partials/head-styles.hbs
+++ b/src/partials/head-styles.hbs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="https://neo4j.com/wp-content/themes/neo4jweb/assets/neo4j-react-modules-assets/search-preact/chunkless/bundle.css" />
 <link rel="stylesheet" href="https://neo4j.com/wp-content/themes/neo4jweb/assets/neo4j-react-modules-assets/search-preact/chunkless/utilities.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@neo4j-ndl/base@2.0.7/lib/neo4j-ds-styles.css" />
 
 {{#if page.attributes.cdn}}
     <link rel="preload" href="{{{page.attributes.cdn}}}/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font">
